# ChangeLog for media-sound/gmusicbrowser
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/gmusicbrowser/ChangeLog,v 1.9 2012/02/02 19:49:53 ssuominen Exp $

*gmusicbrowser-1.1.9 (02 Feb 2012)

  02 Feb 2012; Samuli Suominen <ssuominen@gentoo.org>
  +gmusicbrowser-1.1.9.ebuild:
  Version bump by Julian Ospald

  31 Jan 2012; Samuli Suominen <ssuominen@gentoo.org>
  gmusicbrowser-1.1.8.ebuild:
  Missing AnyEvent::HTTP RDEPEND

  31 Jan 2012; Samuli Suominen <ssuominen@gentoo.org>
  -gmusicbrowser-1.0.1.ebuild, -gmusicbrowser-1.0.2.ebuild:
  old

*gmusicbrowser-1.1.8 (31 Jan 2012)

  31 Jan 2012; Samuli Suominen <ssuominen@gentoo.org>
  +gmusicbrowser-1.1.8.ebuild, metadata.xml:
  Version bump wrt #329995 by Julian Ospald

*gmusicbrowser-1.0.2 (27 Oct 2009)

  27 Oct 2009; Alexis Ballier <aballier@gentoo.org>
  +gmusicbrowser-1.0.2.ebuild:
  version bump, by Sergiy Borodych <bor@univ.kiev.ua>, bug #289036

*gmusicbrowser-1.0.1 (27 Feb 2009)

  27 Feb 2009; Alexis Ballier <aballier@gentoo.org> metadata.xml,
  +gmusicbrowser-1.0.1.ebuild:
  version bump, by Sergiy Borodych <bor@univ.kiev.ua>, bug #249869

*gmusicbrowser-1.0 (13 Aug 2008)

  13 Aug 2008; Alexis Ballier <aballier@gentoo.org>
  +gmusicbrowser-1.0.ebuild:
  version bump

  16 May 2008; Raúl Porcel <armin76@gentoo.org> gmusicbrowser-0.964.ebuild:
  Add ~sparc

*gmusicbrowser-0.964 (16 May 2008)

  16 May 2008; Samuli Suominen <drac@gentoo.org>
  +gmusicbrowser-0.964.ebuild:
  Initial commit wrt #110989, thanks to Ed Catmur, Sergiy Borodych and
  others.
