@@ -5,16 +5,17 @@ DIST gmusicbrowser-1.1.8.tar.gz 1507101 RMD160 a931a4f58e85e178ee97b8ab2e2bb32ac
 DIST gmusicbrowser-1.1.9.tar.gz 1631107 RMD160 b5fa64a67948ebc77d0846f0c7f4a387e47fcc1f SHA1 380be9c805b076d94c155f2084465b8ea042e51b SHA256 7612ec91d8addc8f511e20fd6025ffe735cc1281a8e7b3278368a23f5cb0bd24
 EBUILD gmusicbrowser-1.1.8.ebuild 1801 RMD160 cd0f13625758b381536d6de8d25f77059014669b SHA1 c6c8076e828e15b56c3192674bd1b6b24fd3dca6 SHA256 6266844962123d1aa5bed94d96170baa3159d69c35e94081695b84e09755c724
 EBUILD gmusicbrowser-1.1.9.ebuild 1804 RMD160 06b9beb5ad80201e9f93d862c3f964b7b38cb363 SHA1 1e161f88b97cfc0317467c9727c1eb0ffaccef8b SHA256 7eb0e5e32504b148916479c68dc0c3f722d99e524ad8d6482b14e7108af27a70
-MISC ChangeLog 1607 RMD160 5b835c4438460d8ffb93c2cba2b70c33a6c06bb1 SHA1 d1e1ff6ec55c381ec698aec7ec097a0803219f14 SHA256 00018cf645b1f040c358e8ae0abac6f405e32879bceb6b5e4e63c9a806f666f0
+EBUILD gmusicbrowser-9999.ebuild 1813 RMD160 05657c7f324eb92af304760f41554cfa86aecc2c SHA1 2efdcbf3bb1e06aa191f87ffc54dbea24a787b41 SHA256 c28b126801e38d9b0500446b6b98ae78f41adc1406fd6cee7539828e97b5f9c5
+MISC ChangeLog 1740 RMD160 98df1c34e1c5cfd81a4376c5353eaa99f93150d4 SHA1 69cbd8e55604416821051e851eecbfcf9b5329cd SHA256 0aeeaaaa4c099e1060c3788a133b0b2f0c405fe99f91656efb2e659785b1165b
 MISC metadata.xml 436 RMD160 a326e5a46a65af6f0ed7aa6174f4a1e9281240bb SHA1 cf487dfc079f8ec91f3a6f2b93c541feec97fed7 SHA256 c5fc49f5ef6cc5b56eda956490871a876d0bda67d80c7c76573e0cbbb614f9a3
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBAgAGBQJPKuhAAAoJEEdUh39IaPFNWP0H/idbmMrqyBSpfEtSoAFTPxG2
-lZY989EHiJJPtvYPTWpsY8M3Ft2XLwgr8V124reYpnj4QzUMZlCVxWJg2EBK36Uz
-XJIICaD8njdxntUgXakLh5yVyptI8V6DYCMnx1aEj2m7JQNDezJTGn6FNuOnYrsu
-I8OKdD2ZaNhQwY3I3nDE1B3plKW8rHSkjd/WmVotfDJysoCbHWqy54i6f5MeqmX/
-Q+X2oEy+srcecdMgxe69yqml6uRjvL+i7E2bGS8/l3acK/5Gx9/2P/Fo/4Gf7YJU
-rIlxuGPZFKM7uVK54jerqpNDx3+nqHdvrYl808334wFx0qbKi1eejYk4Ube4+9I=
-=/GLU
+iQEcBAEBAgAGBQJPoIlVAAoJEFpvPKfnPDWzvYsIAIDlmD3//TLjfZn1GhNAEqeo
+YSHyFxdCzIO6LU6Ssk091HQ0yzbw+9j7HqO0RKs+HAYGf9smPnX4FehKpoOrphXU
+VOAhuNTcv1DdUQlRPH3c2+B5YgnSr8brm8Th7Pws+psgxLAGrFS/P5Ee7A1L3XBb
+eQAJys4NdS64TkPlF+SurH6WSE4d4J1mNbLog3caPVtJIEQ5bEYmteVypXhuDpQ/
+GStH/eecKlpqy99YGrGYxpXoaRrsDZkcSCbPdIDxNBEAIyQDa79jizbxr3Tc/x1L
+roK3q/G/4x88R6Vq5MCJyMWPHZ0/7bJZvHqk4rn+tpV3UIbmpVnCkPbhDgywp6g=
+=SNgh
 -----END PGP SIGNATURE-----
