@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/gmusicbrowser
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/gmusicbrowser/ChangeLog,v 1.9 2012/02/02 19:49:53 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/gmusicbrowser/ChangeLog,v 1.10 2012/05/02 01:09:37 hasufell Exp $
+
+*gmusicbrowser-9999 (02 May 2012)
+
+  02 May 2012; Julian Ospald <hasufell@gentoo.org> +gmusicbrowser-9999.ebuild:
+  add live-ebuild
 
 *gmusicbrowser-1.1.9 (02 Feb 2012)
 
